// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Strollable should render correctly 1`] = `
<div>
  <div
    style="height: 100%; width: 100%; overflow: hidden; max-width: inherit; max-height: inherit;"
  >
    <div
      style="width: calc(100% + 0px); height: 100%; max-width: inherit; max-height: inherit; position: relative; overflow-y: scroll; padding-right: 24px; box-sizing: content-box;"
    >
      <div
        style="width: 100%; height: 100%; position: relative;"
      />
    </div>
  </div>
</div>
`;

exports[`StrollableContainer should render correctly 1`] = `
<div>
  <div
    style="height: 100%; width: 100%; max-width: inherit; max-height: inherit;"
  >
    <div
      style="height: 100%; width: 100%; max-width: inherit; max-height: inherit;"
    >
      <div
        style="height: 100%; width: 100%; overflow: hidden; max-width: inherit; max-height: inherit;"
      >
        <div
          style="width: calc(100% + 0px); height: 100%; max-width: inherit; max-height: inherit; position: relative; overflow-y: scroll; padding-right: 24px; box-sizing: content-box;"
        >
          <div
            style="width: 100%; height: 100%; position: relative;"
          >
            <div />
            child
          </div>
        </div>
      </div>
      <div />
    </div>
  </div>
</div>
`;
